# oisource

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json
front/: package-lock.json  package.json
front/pages/: index.tsx  table.tsx
front/pages/api/: apolloClient.ts  hello.ts
migrations/2022-12-19-022224_oisource/: up.sql
src/: article.rs  crawl.rs  fetch.rs  main.rs  output.rs  schema.rs
src/crawl/: mod.rs  qiita.rs  twitter.rs  youtube.rs
src/store/: model.rs
src/utils/: errors.rs
