[package]
name = "oisource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
actix-web = "4"
serde = {version="1.0",features=["derive"]}
uuid = {version="1.1.2",features=["serde","v4"]}
thiserror = "1.0.31"
anyhow="1.0"
serde_json = "1.0.82"
dotenv="0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
async-graphql = "4.0"
async-graphql-actix-web = "4.0" # If you need to integrate into actix-web
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.58"